<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.fragments.RegistrationFragment">
    <data>
        <variable
            name="fragment"
            type="com.example.votesystem.presentation.ui.fragments.RegistrationFragment" />
        <variable
            name="viewModel"
            type="com.example.votesystem.presentation.viewmodel.LoginViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_caption"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/editLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editLastName">

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <RadioButton
                android:id="@+id/radioButtonMale"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:buttonTint="@color/white"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/male"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/female"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_btn"
        android:onClick="@{() -> fragment.getDataForRegistration()}"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>